--- a/my_todo_list.html
+++ b/my_todo_list.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>    
-    <div>
-        <div>
+    <div class="wrapper">
+        <div class="border">
             <h1>Todo Apps</h1>
             <input type="text" id="addtodo" placeholder="just add stuff...">
             <button type="button" id="addbtn">Add</button>
